--- a/app/style.css
+++ b/app/style.css
@@ -64,7 +64,37 @@
   min-width: 90%;
 }
 
+/* Style the tab buttons */
+.tablink {
+  background-color: #555;
+  color: white;
+  float: left;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 14px 16px;
+  font-size: 17px;
+  width: 25%;
+}
 
+/* Change background color of buttons on hover */
+.tablink:hover {
+  background-color: #777;
+}
+
+/* Set default styles for tab content */
+.tabcontent {
+  color: white;
+  display: none;
+  padding: 50px;
+  text-align: center;
+}
+
+/* Style each tab content individually */
+#Home {background-color:red;}
+#TravelLog {background-color:green;}
+#BucketList {background-color:blue;}
+#Resources {background-color:orange;}
 
 .visible{
   visibility: visible
