--- a/app/style.css
+++ b/app/style.css
@@ -1,10 +1,18 @@
 .header_div {
   visibility: hidden;
 }
+html,
+.bg {
+  background-image: url("assets/background.png");
+  height: 100%,
+  width: 100%
+}
 
+.view {
+  display: none;
+}
 
 .dropdown {
-  visibility: hidden;
   display: inline-block;
   position: relative;
   font-size: 16px;
@@ -154,6 +162,8 @@
  display: block; /* Display block instead of inline */
  transition: 0.3s; /* Transition effects on hover (color) */
 }
+
+
 .overlay ul {
     font-size: 28px;
  color: #818181;
@@ -177,3 +187,7 @@
    top: 15px;
    right: 35px;
 } }
+
+.review-form {
+  display: "none"
+}
